--- a/res/layout/main.xml
+++ b/res/layout/main.xml
@@ -1,12 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout
+	xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
     android:layout_width="fill_parent"
-    android:layout_height="fill_parent"
-    >
-<TextView  
-    android:layout_width="fill_parent" 
-    android:layout_height="wrap_content" 
-    android:text="@string/hello"
-    />
+    android:layout_height="fill_parent">
+	<TextView
+		android:id="@+id/keycode" 
+    	android:layout_height="wrap_content"
+		android:layout_width="fill_parent"
+    	android:layout_weight="1"
+    	android:text=""
+    	android:textSize="95px"
+    	android:gravity="center" />
+	<EditText
+		android:id="@+id/input"
+		android:layout_width="fill_parent"
+		android:layout_height="wrap_content"
+		android:singleLine="true" />
 </LinearLayout>
